--- a/src/app/components/right-side/right-side.component.html
+++ b/src/app/components/right-side/right-side.component.html
@@ -5,7 +5,14 @@
 
 <mat-tab-group animationDuration="0ms">
     <mat-tab *ngIf="rescue==true" label="Rescue">Rescue
-        <br> {{rescueData}}</mat-tab>
-    <mat-tab *ngIf="names==true" label="Names">Names<br>{{namesData.elements}}</mat-tab>
-    <mat-tab *ngIf="photos==true" label="Photos">Photos<br>{{photosData.element}</mat-tab>
+        <br>
+        <p *ngFor="let item of values">{{item}}</p>
+    </mat-tab>
+    <mat-tab *ngIf="names==true" label="Names">Names<br>
+        <p *ngFor="let item of namesValues">{{item}}</p>
+    </mat-tab>
+    <mat-tab *ngIf="photos==true" label="Photos">Photos<br>
+        <h3 *ngFor="let item of photosValues">{{item[0]}} <img src="item[1]"></h3>
+
+    </mat-tab>
 </mat-tab-group>
