add google maps

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,17 +15,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFaXNvUSNlqQoqlNBgCgppWcSeYxb5kDM"></script>
+
 </head>
 
 <body>
-
     <mat-grid-list cols="2" rowHeight="1:1">
         <mat-grid-tile>1
             <app-left-side></app-left-side>
         </mat-grid-tile>
         <mat-grid-tile>2
             <app-right-side></app-right-side>
+
+            <google-map [options]="mapOptions">
+                <map-marker [position]="marker.position"></map-marker>
+            </google-map>
         </mat-grid-tile>
     </mat-grid-list>
 
