--- a/src/app/components/left-side/left-side.component.html
+++ b/src/app/components/left-side/left-side.component.html
@@ -1,7 +1,8 @@
 <mat-card class="example-card">
     <mat-card-header>
+
         <mat-card-title>{{left.title}}</mat-card-title>
-        <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+        <mat-icon></mat-icon>
     </mat-card-header>
     <img mat-card-image [src]="left.mainImage.url">
     <mat-card-content>
